updated issues from #master

--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -223,7 +223,7 @@
     background-size: cover;
 }
 .bg-green {
-    background-color: #94bb4d !important;
+    background-color: #c9dda4 !important;
 }
 
 @media (min-width: 992px) {
@@ -609,6 +609,75 @@ li{
 .custom-rounded-circle{
     border-radius:5%;
 }
+.product-card-img-sec {
+    background: #F4F4F4;
+    border-radius: 7px 7px 0px 0px;
+    overflow: hidden;
+    height: 300px;
+}
+
+a.product-add-to-cart-btn {
+    background: transparent;
+    padding: 10px 60px;
+    color: #000;
+    border: 1px solid black;
+}
+a.product-wish-btn {
+    padding: 10px 10px;
+    border: 1px solid black;
+    color: #000;
+}
+.product-star {
+    color: #F9A014;
+    font-size: 12px;
+    font-weight: 600;
+}
+.product-half-star{
+    color: #F9A014;
+    font-size: 12px;
+    font-weight: 400;
+}
+.product-review-count{
+    font-size: 12px;
+    font-weight: 600;
+}
+.product-card-contnent-sec {
+    background: #94bb4d1c;
+    padding: 20px 10px;
+    border-radius: 0px 0px 7px 7px;
+}
+.product-item-name a {
+    text-align: left;
+    font-size: 15px;
+    font-weight: 500;
+    color: #4e6824;
+    text-decoration: none;
+    font-weight: 400;
+    margin-bottom: 0;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    line-height: 1.5;
+    letter-spacing: 1px;
+    min-height: initial !important;
+    height: 50px;
+}
+.newsletter-title-sec{
+    font-size: 30px;
+    font-weight: 600;
+}
+.newsletter-sub-title {
+    font-size: 15px;
+    margin: 10px 0px;
+}
+
+.product-card-img-sec img {
+    width: 100%;
+    height: auto;
+}
+
 @media (max-width: 992px) {
     .hero-header,
     .page-header {
